--- a/parser/BUILD.bazel
+++ b/parser/BUILD.bazel
@@ -11,4 +11,5 @@ go_test(
     name = "go_default_test",
     srcs = ["parser_test.go"],
     embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
