move types to bazel package

--- a/parser/BUILD.bazel
+++ b/parser/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = ["parser.go"],
     importpath = "github.com/rickypai/bazel-log-statter/parser",
     visibility = ["//visibility:public"],
+    deps = ["//bazel:go_default_library"],
 )
 
 go_test(
