--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -27,7 +27,10 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/rickypai/bazel-log-statter",
     visibility = ["//visibility:private"],
-    deps = ["//parser:go_default_library"],
+    deps = [
+        "//bazel:go_default_library",
+        "//parser:go_default_library",
+    ],
 )
 
 go_binary(
